--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^6.8.3"
+    "mongoose": "^6.8.3",
+    "mongoose-sequence": "^5.3.1"
   },
   "license": "MIT",
   "devDependencies": {
