--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shorturl",
   "version": "0.0.3",
-  "engines":{
+  "engines": {
     "node": "18.10.0",
     "npm": "8.19.2"
   },
@@ -17,7 +17,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^6.8.3",
-    "mongoose-sequence": "^5.3.1"
+    "mongoose-sequence": "^5.3.1",
+    "validator": "^13.7.0"
   },
   "license": "MIT",
   "devDependencies": {
