--- a/package.json
+++ b/package.json
@@ -12,13 +12,10 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^6.8.3",
-    "mongoose-sequence": "^5.3.1",
-    "validator": "^13.7.0"
+    "mongoose": "^6.8.3"
   },
   "license": "MIT",
   "devDependencies": {
